# GstreamerCodeSnippets

./: CONTRIBUTORS.md  README.md
0.10/C/gst-sdk-tutorials/: README.md
0.10/Python/pygst-sdk-tutorials/: basic-tutorial-12-new.py  basic-tutorial-12.py  basic-tutorial-13-ext.py  basic-tutorial-13.py  basic-tutorial-2.py  basic-tutorial-8.py  basic-tutorial-9.py  playback-tutorial-1.py  playback-tutorial-2.py  playback-tutorial-3.py  playback-tutorial-7-exc.py  playback-tutorial-7.py
0.10/Shell/: videoeffects.sh
1.0/Python/pygst-sdk-tutorials/: basic-tutorial-2.py  basic-tutorial-3.py  basic-tutorial-4.py
1.0/Python/pygst-tutorial/: 0.md  3.md  6.md  7.md  8.md  example21.py  example22.py  example22b.py  example23.py  example31.py  example32.py  example33.py  example4.py  example5.py  example61.py  example62.py  example63.py  example71.py  example72.py  example8.py
C/: .gitignore  multifilesink.c  switchbintest.c  takepic.c  zoom.c
Other/0.10/C/: multifilesink.c
Other/0.10/Python/: tee_and_rtmpsink.py
Python/pygst-sdk-tutorials/: README.md  basic-tutorial-1.py
Python/pygst-tutorial/: 0.md  1.md  2.md  3.md  4.md  5.md  example21.py  example31.py  example32.py  example4.py  example62.py  example8.py
Rust/basic-tutorial/1-hello-world/: Cargo.toml  README.md
Rust/plugins/: .gitignore  Cargo.toml  README.md  test.sh
Rust/plugins/utils/xdgscreencapsrc/: Cargo.toml
Rust/plugins/utils/xdgscreencapsrc/src/: lib.rs
Rust/plugins/utils/xdgscreencapsrc/src/xdgscreencapsrc/: imp.rs  mod.rs
Shell/: videoeffects.sh
(+18 files in other folders)
